# asocialdynamics

./: README.md  gillespiefornewmodel  gillespiefornewmodel.py  plot_clusteringprob.py
ArgosCode_antagonistic/behaviours/: CMakeLists.txt  agent.h  agent_blue.c  agent_red.c
ArgosCode_antagonistic/cmake/: ARGoSBuildChecks.cmake
ArgosCode_antagonistic/loop_functions/: ASB_experiment_10_90.kconf  ASB_experiment_20_80.kconf  ASB_experiment_30_70.kconf  ASB_experiment_40_60.kconf  kilogrid_stub.cpp  kilogrid_stub.h
ArgosCode_withoutAntagonistic/behaviours/: agent_blue.c  agent_red.c
ArgosCode_withoutAntagonistic/loop_functions/: ASB_experiment_1.kconf  ASB_experiment_50_50_test.kconf  ASB_experiment_55_45.kconf  ASB_experiment_60_40.kconf  kilogrid_stub.cpp
Gillespiecode/: ds_gill_scale_n.py  gill_ci_scale_n.py  gillespiecode_ci.py  gillespiecode_vm.py
Mathematica/basic/: basic_antagonistic.nb  basic_ci_ds_synergetic.nb
Mathematica/best-of-n/: DSBOfnRK4.m  DSBOfnvectfield.m  DirectSwitchBOfn_002b.m
Mathematica/robot_specific/: selfsourcing_ds.nb  selfsourcingcit2.nb  selfsourcingt1.nb
Plottingcode/getdatainformat/: getonlyspdval_withradd_nci.py  getonlyspdval_withradd_nci_nrA.py
Plottingcode/heatmaps/: speed_accuracy_coh_eta_etaa_heatmaps.py  speedvsaccuracybarrobdubnaHMAPallqinone_coh_stdev.py  speedvsaccuracybarrobdubnaHMAPgioab_coh_noquorum.py
Plottingcode/spd/: SPDgillci.py
Robotcode/ARGoS_simulation/behaviours/: CMakeLists.txt  agent_antagonistic.c  agent_synergistic.c
behaviours/: agent_antagonistic.c  agent_synergistic.c
best-of-n/: CI.m
(+35 files in other folders)
